[package]
name = "expand"
version = "0.2.0"
authors = ["figsoda <figsoda@pm.me>"]
edition = "2018"
license = "MPL-2.0"
description = "Macro to expand byte string and string literals"
documentation = "https://docs.rs/expand"
homepage = "https://github.com/figsoda/expand"
repository = "https://github.com/figsoda/expand"
readme = "README.md"
keywords = ["macro", "macros", "literal", "pattern", "proc-macro"]
categories = ["no-std", "rust-patterns"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.7"

[dependencies.syn]
version = "1.0.48"
default-features = false
features = ["proc-macro", "parsing"]
