[package]
name = "expand"
version = "0.2.0"
authors = ["figsoda <figsoda@pm.me>"]
edition = "2018"
description = "Macro to expand byte string and string literals"
documentation = "https://docs.rs/expand"
readme = "README.md"
homepage = "https://github.com/figsoda/expand"
repository = "https://github.com/figsoda/expand"
license = "MPL-2.0"
keywords = ["literal", "macro", "macros", "pattern", "proc-macro"]
categories = ["no-std", "rust-patterns"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.9"

[dependencies.syn]
version = "1.0.63"
default-features = false
features = ["parsing"]
